Added TCP Client

--- a/SayHelloServiceHost/App.config
+++ b/SayHelloServiceHost/App.config
@@ -9,8 +9,8 @@
   <system.serviceModel>
     <services>
       <service name="HelloService.SayHelloService" behaviorConfiguration="mexBehavior">
-        <endpoint address="HelloService_AnyName" binding="basicHttpBinding" contract="HelloService.ISayHelloService" />
-        <endpoint address="HelloService_AnyName" binding="netTcpBinding" contract="HelloService.ISayHelloService" />
+        <endpoint address="AnyAddress" binding="basicHttpBinding" contract="HelloService.ISayHelloService" />
+        <endpoint address="AnyAddress" binding="netTcpBinding" contract="HelloService.ISayHelloService" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
