--- a/HelloServiceClient/HelloServiceClient.csproj
+++ b/HelloServiceClient/HelloServiceClient.csproj
@@ -68,6 +68,13 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\SayHelloService\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SayHelloService\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SayHelloService\SayHelloService.wsdl" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -88,13 +95,6 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Connected Services\SayHelloService\item.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\SayHelloService\item1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\SayHelloService\SayHelloService.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.aspx.cs">
@@ -110,6 +110,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProxyClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
