--- a/HelloServiceClient/Web.config
+++ b/HelloServiceClient/Web.config
@@ -28,12 +28,12 @@
       </netTcpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8080/HelloService_AnyName"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISayHelloService"
-        contract="SayHelloService.ISayHelloService" name="BasicHttpBinding_ISayHelloService" />
-      <endpoint address="net.tcp://localhost:8090/HelloService_AnyName"
-        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISayHelloService"
-        contract="SayHelloService.ISayHelloService" name="NetTcpBinding_ISayHelloService">
+      <endpoint address="http://localhost:8080/AnyAddress" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ISayHelloService" contract="SayHelloService.ISayHelloService"
+        name="BasicHttpBinding_ISayHelloService" />
+      <endpoint address="net.tcp://localhost:8090/AnyAddress" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_ISayHelloService" contract="SayHelloService.ISayHelloService"
+        name="NetTcpBinding_ISayHelloService">
         <identity>
           <userPrincipalName value="PC\Kittu" />
         </identity>
